--- a/KebabMasterApp/StarterControl.xaml
+++ b/KebabMasterApp/StarterControl.xaml
@@ -8,32 +8,12 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+
         </Grid.ColumnDefinitions>
-        <Button Grid.Column="0" Content="Client Screen" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80" Width="100" Click="ClientScreen_Click"/>
-        <Button Grid.Column="1" Content="Client Orders" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80" Width="100"/>
-        <Button Grid.Column="2" Content="Order Management" HorizontalAlignment="Center" VerticalAlignment="Center" Height="80" Width="100"/>
+        <TextBlock FontSize="30" Text="Welcome in KebabMaster!"  HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+        <Button  Content="Start new order!" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="80" Width="100" Click="ClientScreen_Click" Margin="0 0 0 80"/>
 
-        <Popup   Name="Popup1" HorizontalAlignment="Center" VerticalAlignment="Center"  
-            Width="250" Height="150" IsOpen="False" PlacementTarget="{Binding ElementName=StarterControl}"
-    Placement="Center" AllowsTransparency="True">
-            <Grid Background="WhiteSmoke">
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
 
-                    <Label Content="Provide administration password" Margin="5"/>
-                    <TextBox Grid.Row="1" Name="MyTextBox" Margin="5"/>
-                <Button Grid.Row="2" Content="OK" Margin="5" Click="PopUp_Button_Confirm"/>
-                <Button Grid.Row="3" Content="Cancel" Margin="5" Click="Button_Click_2"/>
-                <Label Grid.Row="4" Name="MyLabel" Margin="5"/>
-                </Grid>
-        </Popup>
+
     </Grid>
 </UserControl>
