--- a/KebabMasterApp/OrderViewerControl.xaml
+++ b/KebabMasterApp/OrderViewerControl.xaml
@@ -15,9 +15,8 @@
         <StackPanel>
             <TextBlock FontSize="30" Text="Order Status" TextAlignment="Center"></TextBlock>
             <TextBlock FontSize="20" Text="Please, collect your order as soon as it turns green! Thank You!" TextAlignment="Center"></TextBlock>
-
         </StackPanel>
-        <ListView x:Name="orderList" Grid.Row="1" Margin="10 10 10 10" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Center" MinWidth="300">
+        <ListView x:Name="orderList" Grid.Row="1" Margin="10 10 10 10" BorderThickness="1" BorderBrush="Black" HorizontalAlignment="Center" MinWidth="300" FontSize="15">
             <ListView.View >
                 <GridView>
                     <GridViewColumn Width="150" Header="Number"  DisplayMemberBinding="{Binding OrderNumber}" />
