--- a/KebabMasterApp/MenuControl.xaml
+++ b/KebabMasterApp/MenuControl.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="KebabMasterApp.OrderContentControl"
+﻿<UserControl x:Class="KebabMasterApp.MenuControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:KebabMasterApp"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="900">
+             d:DesignHeight="550" d:DesignWidth="1000">
     <Grid RenderTransformOrigin="0.485,0.471" ShowGridLines="True">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -16,8 +16,16 @@
             <RowDefinition Height="219*" />
             <RowDefinition Height="129*" />
         </Grid.RowDefinitions>
-        <TextBlock FontSize="48" Text="KebabMaster Menu"/>
-        <ListView x:Name="menu" Grid.Column="0" Grid.Row="1" Margin="15,0,15,0" >
+        <Grid Grid.Column="1" Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock  FontSize="20" Text="Total order price:" Name="sumText" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="10 10 10 10"/>
+            <TextBlock  FontSize="20" Text="0" Name="sumVal" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Bottom"  Margin="10 10 10 10"/>
+        </Grid>
+        <TextBlock  FontSize="48" Text="KebabMaster Menu"/>
+        <ListView x:Name="menu" Grid.Column="0" Grid.Row="1" Margin="15,0,15,0" FontSize="15" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="150" Header="Name" DisplayMemberBinding="{Binding ItemName}" />
@@ -34,12 +42,12 @@
                 </GroupStyle>
             </ListView.GroupStyle>
         </ListView>
-        <ListView x:Name="order" Grid.Column="1" Grid.Row="1" Margin="15,15,15,15" >
+        <ListView x:Name="order" Grid.Column="1" Grid.Row="1" Margin="15,15,15,15" FontSize="15">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Name" Width="120" DisplayMemberBinding="{Binding Name}" />
-                    <GridViewColumn Header="Price" Width="100" DisplayMemberBinding="{Binding Price}" />
-                    <GridViewColumn Header="Quantity" Width="100" DisplayMemberBinding="{Binding Quantity}" />
+                    <GridViewColumn Header="Price" Width="120" DisplayMemberBinding="{Binding Price}" />
+                    <GridViewColumn Header="Quantity" Width="80" DisplayMemberBinding="{Binding Quantity}" />
                     <GridViewColumn Header="" Width="80" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
@@ -73,7 +81,7 @@
             <ComboBox x:Name="paymentCombo" Width="120" Grid.Column="1"  VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="0" />
             <ComboBox x:Name="orderFormCombo" Width="120" Grid.Column="1"  VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="1" />
 
-            <Button Name="placeOrderBtn" Content="Place order"  VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="2" Click="Button_Click_1" Grid.Column="1">
+            <Button Name="placeOrderBtn" Content="Place order"  VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="2" Click="Place_Order_Click" Grid.Column="1">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}">
                         <Style.Triggers>
@@ -91,7 +99,7 @@
                 </Button.Style>
             </Button>
         </Grid>
-        <Button Name="addPosBtn" Content="Add Position" Margin="19,26,270,75" Grid.Row="2" Click="Button_Click" >
+        <Button Name="addPosBtn" Content="Add Position" Margin="19,26,270,75" Grid.Row="2" Click="Add_Click" >
             <Button.Style>
                 <Style TargetType="{x:Type Button}">
                     <Style.Triggers>
@@ -103,19 +111,23 @@
             </Button.Style>
         </Button>
         <Popup   Name="finishPopup" HorizontalAlignment="Center" VerticalAlignment="Center"  
-            Width="250" Height="150" IsOpen="False" PlacementTarget="{Binding ElementName=OrderContentControl}"
-    Placement="Center" AllowsTransparency="True" >
+            Width="250" Height="250" IsOpen="False" PlacementTarget="{Binding ElementName=OrderContentControl}"
+            Placement="Center" AllowsTransparency="True" >
             <Grid Background="WhiteSmoke">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
                 <TextBlock  Text="Your Order was sent! " Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                <TextBlock  Text="Your order number is:" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Name="textBoxOrderNumber"  Grid.Row="2"/>
-                <Button Grid.Row="3" Content="OK" Margin="5" Click="PopUp_Button_Confirm"/>
+                <TextBlock  Text="Pay for your order in cash." Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <TextBlock  Text="The viewer screen will show, when it's ready" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <TextBlock  Text="Your order number is:" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Name="textBoxOrderNumber"  Grid.Row="4"/>
+                <Button Grid.Row="5" Content="OK" Margin="5" Click="PopUp_Button_Confirm"/>
             </Grid>
         </Popup>
     </Grid>
