--- a/KebabMasterApp/MainWindow.xaml
+++ b/KebabMasterApp/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="KebabMasterApp.MainWindow"
+﻿<Window x:Name="window" x:Class="KebabMasterApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KebabMasterApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="1000">
+        Title="MainWindow" Height="550" Width="1000" WindowStyle="None">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -15,7 +15,7 @@
             <ContentControl x:Name="ContentArea" Grid.Row="0"/>
         </DockPanel>
         <Popup   Name="errorPopUp" HorizontalAlignment="Center" VerticalAlignment="Center"  
-            Width="250" Height="150" IsOpen="False" PlacementTarget="{Binding ElementName=MainWindow}"
+            Width="250" Height="150" IsOpen="False" PlacementTarget="{Binding ElementName=window}"
     Placement="Center" AllowsTransparency="True" >
             <Grid Background="WhiteSmoke">
                 <Grid.RowDefinitions>
