--- a/KebabMasterApp/OrderManagementControl.xaml
+++ b/KebabMasterApp/OrderManagementControl.xaml
@@ -18,13 +18,12 @@
         </Grid.RowDefinitions>
         <TextBlock  Margin="10 0 0 0" TextWrapping="Wrap" Grid.Row="0" Grid.Column="0" FontSize="30" Text="KebabMaster Order Manager"/>
 
-        <Button MinWidth="100" MinHeight="50" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Update Status"  Name="upStatusBtn" IsEnabled="{Binding IsLoggedIn}" Click="Button_Click">
+        <Button MinWidth="100" MinHeight="50" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Content="Update Status"  Name="upStatusBtn"  Click="Button_Click">
             <Button.Style>
                 <Style>
                     <Style.Triggers>
-                        <DataTrigger 
-                     Binding ="{Binding ElementName=orderList, Path=SelectedIndex}" Value="-1">
-                            <Setter Property="Button.IsEnabled" Value="false"/>
+                        <DataTrigger  Binding="{Binding ElementName=orderList, Path=SelectedItem}" Value="{x:Null}">
+                            <Setter Property="Button.IsEnabled" Value="False"/>
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
