--- a/KebabMasterApp/MainWindow.xaml
+++ b/KebabMasterApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KebabMasterApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="1000" WindowStyle="None">
+        Title="MainWindow" Height="550" Width="1000" >
 
     <Grid>
         <Grid.RowDefinitions>
